--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "mongoose": "^6.6.1",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
 }
